// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps Steps customization demo works fine 1`] = `
<customization>
  <t-steps
    class="demo-steps"
    current="1"
    layout="vertical"
    readonly="true"
  >
    <t-step-item
      title="已完成步骤"
    >
      <wx-view
        slot="content"
      >
        可自定义此处内容
      </wx-view>
      <wx-view
        class="extra-img"
        slot="extra"
      >
        <wx-image
          alt=""
          mode="widthFix"
          src="https://oteam-tdesign-1258344706.cos.ap-guangzhou.myqcloud.com/mobile/%E5%9B%BE%E7%89%871.png"
          style="width: 100%"
        />
      </wx-view>
    </t-step-item>
    <t-step-item
      title="当前步骤"
    >
      <wx-view
        slot="content"
      >
        可自定义此处内容
      </wx-view>
    </t-step-item>
    <t-step-item
      title="未完成步骤"
    >
      <wx-view
        slot="content"
      >
        可自定义此处内容
      </wx-view>
    </t-step-item>
  </t-steps>
  <t-steps
    class="demo-steps"
    current="{{2}}"
    layout="vertical"
    readonly="true"
  >
    <t-step-item
      content="可自定义此处内容"
      icon="slot"
      tClassDescription="t-class-description"
      tClassExtra="t-class-extra"
      tClassInner="t-class-inner t-class-inner--finish"
      tClassTitle="t-class-title "
      title="二级步骤描述"
    >
      <wx-view
        class="t-icon-slot t-icon-slot--finish "
        slot="icon"
      />
      <wx-view
        slot="extra"
      >
        可自定义此处内容
      </wx-view>
    </t-step-item>
    <t-step-item
      content="可自定义此处内容"
      icon="slot"
      tClassDescription="t-class-description"
      tClassExtra="t-class-extra"
      tClassInner="t-class-inner t-class-inner--finish"
      tClassTitle="t-class-title t-class-title--no"
      title=""
    >
      <wx-view
        class="t-icon-slot t-icon-slot--finish t-icon-slot--child"
        slot="icon"
      />
      <wx-view
        slot="extra"
      >
        可自定义此处内容
      </wx-view>
    </t-step-item>
    <t-step-item
      content="可自定义此处内容"
      icon="slot"
      tClassDescription="t-class-description"
      tClassExtra="t-class-extra"
      tClassInner="t-class-inner t-class-inner--active"
      tClassTitle="t-class-title t-class-title--no"
      title=""
    >
      <wx-view
        class="t-icon-slot t-icon-slot--active t-icon-slot--child"
        slot="icon"
      />
      <wx-view
        slot="extra"
      >
        可自定义此处内容
      </wx-view>
    </t-step-item>
    <t-step-item
      content="可自定义此处内容"
      icon="slot"
      tClassDescription="t-class-description"
      tClassExtra="t-class-extra"
      tClassInner="t-class-inner t-class-inner--default"
      tClassTitle="t-class-title "
      title="二级步骤描述"
    >
      <wx-view
        class="t-icon-slot t-icon-slot--default "
        slot="icon"
      />
      <wx-view
        slot="extra"
      >
        可自定义此处内容
      </wx-view>
    </t-step-item>
    <t-step-item
      content="可自定义此处内容"
      icon="slot"
      tClassDescription="t-class-description"
      tClassExtra="t-class-extra"
      tClassInner="t-class-inner t-class-inner--default"
      tClassTitle="t-class-title "
      title="二级步骤描述"
    >
      <wx-view
        class="t-icon-slot t-icon-slot--default "
        slot="icon"
      />
      <wx-view
        slot="extra"
      >
        可自定义此处内容
      </wx-view>
    </t-step-item>
  </t-steps>
</customization>
`;

exports[`Steps Steps double demo works fine 1`] = `
<double>
  <t-steps
    class="demo-steps"
    current="1-0"
    layout="vertical"
    readonly="true"
  >
    <t-step-item
      title="已完成步骤"
    />
    <t-step-item
      subStepItems="{{
        Array [
          Object {
            "title": "二级步骤描述",
          },
          Object {
            "title": "二级步骤描述",
          },
        ]
      }}"
      title="当前步骤"
    />
    <t-step-item
      title="未完成步骤"
    />
  </t-steps>
  <t-steps
    class="demo-steps"
    current="1-0"
    currentStatus="error"
    layout="vertical"
    readonly="true"
  >
    <t-step-item
      title="已完成步骤"
    />
    <t-step-item
      subStepItems="{{
        Array [
          Object {
            "title": "二级步骤描述",
          },
          Object {
            "title": "二级步骤描述",
          },
        ]
      }}"
      title="错误步骤"
    />
    <t-step-item
      title="未完成步骤"
    />
  </t-steps>
</double>
`;

exports[`Steps Steps horizontal demo works fine 1`] = `
<horizontal>
  <t-steps
    class="demo-steps"
    defaultCurrent="1"
  >
    <t-step-item
      title="步骤描述"
    />
    <t-step-item
      title="步骤描述"
    />
  </t-steps>
  <t-steps
    class="demo-steps"
    current="{{1}}"
    bind:change="handleChange"
  >
    <t-step-item
      content="辅助信息文字最多两行"
      title="步骤描述"
    />
    <t-step-item
      content="辅助信息文字最多两行"
      title="步骤描述"
    />
  </t-steps>
</horizontal>
`;

exports[`Steps Steps readonly demo works fine 1`] = `
<readonly>
  <t-steps
    class="demo-steps"
    defaultCurrent="0"
    readonly="true"
  >
    <t-step-item
      title="当前步骤"
    />
    <t-step-item
      title="未完成步骤"
    />
  </t-steps>
  <t-steps
    class="demo-steps"
    defaultCurrent="0"
    readonly="true"
  >
    <t-step-item
      content="辅助信息文字最多两行"
      title="当前步骤"
    />
    <t-step-item
      content="辅助信息文字最多两行"
      title="未完成步骤"
    />
  </t-steps>
  <t-steps
    class="demo-steps"
    defaultCurrent="0"
    readonly="true"
  >
    <t-step-item
      content="辅助信息文字最多两行"
      status="error"
      title="错误步骤"
    />
    <t-step-item
      content="辅助信息文字最多两行"
      title="未完成步骤"
    />
  </t-steps>
</readonly>
`;

exports[`Steps Steps theme demo works fine 1`] = `
<theme>
  <t-steps
    class="demo-steps"
    current="1"
    layout="vertical"
    readonly="true"
    theme="dot"
  >
    <t-step-item
      title="事件描述"
    />
    <t-step-item
      title="事件描述"
    />
    <t-step-item
      title="事件描述"
    />
  </t-steps>
</theme>
`;

exports[`Steps Steps vertical demo works fine 1`] = `
<vertical>
  <t-steps
    class="demo-steps"
    current="1"
    layout="vertical"
    readonly="true"
  >
    <t-step-item
      title="已完成步骤"
    />
    <t-step-item
      title="当前步骤"
    />
    <t-step-item
      title="未完成步骤"
    />
  </t-steps>
  <t-steps
    class="demo-steps"
    current="1"
    layout="vertical"
    readonly="true"
  >
    <t-step-item
      title="已完成步骤"
    />
    <t-step-item
      status="error"
      title="错误步骤"
    />
    <t-step-item
      title="未完成步骤"
    />
  </t-steps>
</vertical>
`;
